# Jarvis

./: .gitignore  README.md  pyproject.toml
configs/: default.json  default.yaml
data/data/memory/: episodic_log.jsonl  profile.json
docs/: ARCHITECTURE.md  MODELS.md  ROADMAP.md  SETUP.md  UI_DESIGN.md
src/antigravity_jarvis/: __init__.py  app.py  bootstrap.py
src/antigravity_jarvis/api/: __init__.py  schemas.py
src/antigravity_jarvis/avatar/: __init__.py  avatar_bridge.py
src/antigravity_jarvis/brain/: memory.py  session_manager.py
src/antigravity_jarvis/config/: settings.py
src/antigravity_jarvis/control/: __init__.py  system_actions.py
src/antigravity_jarvis/core/: orchestrator.py
src/antigravity_jarvis/emotion/: __init__.py  engine.py
src/antigravity_jarvis/modes/: __init__.py  router.py
src/antigravity_jarvis/planning/: __init__.py  task_manager.py
src/antigravity_jarvis/services/: __init__.py  model_registry.py
src/antigravity_jarvis/services/llm/: __init__.py  runtime.py
src/antigravity_jarvis/ui/: __init__.py  desktop.py  event_bus.py  web.py
src/antigravity_jarvis/ui/web_static/: app.js  index.html  styles.css
src/antigravity_jarvis/voice/: __init__.py  stt.py  tts.py  wake_word.py
